* Convert to an R package: 'make check/install/build' works!
git-svn-id: file:///home/manu/work/irace/svn/trunk@482 d10a546b-4b69-48e5-8b66-49ccea70c6a4

--- a/.Rbuildignore
+++ b/.Rbuildignore
@@ -1,22 +1,20 @@
-*.diff
-.*
-.Rhistory
-.svn
-Instances/*
+.+\.diff
+.+\.orig
+.*\.svn
+\.Rhistory
+Instances
 Makefile
 Program
 TODO
-TUNE*
+TUNE.*
 dist.sh
-doc/
+doc
 examples/beamaco
 examples/hypervolume
 hooks/hook-evaluate
 hooks/hook-run
 hooks/tune-main
-inst/*.svn
-inst/*~
-parameters.txt
+inst/.+~
+parameters\.txt
 tune-conf
-web/
-
+web
