* .Rbuildignore: Fix some matches.
git-svn-id: file:///home/manu/work/irace/svn/trunk@498 d10a546b-4b69-48e5-8b66-49ccea70c6a4

--- a/.Rbuildignore
+++ b/.Rbuildignore
@@ -2,19 +2,19 @@
 .+\.orig
 .*\.svn
 \.Rhistory
-Instances
+Instances$
 Makefile
 Program
 TODO
 TUNE.*
 dist.sh
-doc
+^doc
 examples/beamaco
 examples/hypervolume
-hooks/hook-evaluate
-hooks/hook-run
-hooks/tune-main
+^hooks/hook-evaluate
+^hooks/hook-run
+^hooks/tune-main
 inst/.+~
-parameters\.txt
-tune-conf$
-web
+^parameters\.txt
+^tune-conf$
+^web
