* .Rbuildignore: Adjust regexp a bit more.
git-svn-id: file:///home/manu/work/irace/svn/trunk@499 d10a546b-4b69-48e5-8b66-49ccea70c6a4

--- a/.Rbuildignore
+++ b/.Rbuildignore
@@ -1,14 +1,14 @@
-.+\.diff
-.+\.orig
-.*\.svn
-\.Rhistory
+\.diff$
+\.orig$
+\.svn$
+\.Rhistory$
 Instances$
 Makefile
 Program
 TODO
 TUNE.*
-dist.sh
-^doc
+dist\.sh
+^doc$
 examples/beamaco
 examples/hypervolume
 ^hooks/hook-evaluate
