--- a/NAMESPACE
+++ b/NAMESPACE
@@ -1,6 +1,8 @@
 export(irace.version,irace.license)
 export(irace.cmdline,irace.usage,irace.main,irace)
-export(checkConfiguration, printConfiguration, readConfiguration, buildCommandLine, readParameters, candidates.print.command, candidates.print)
+export(defaultConfiguration,checkConfiguration, printConfiguration,
+       readConfiguration, buildCommandLine, readParameters,
+       candidates.print.command, candidates.print, removeCandidatesMetaData)
 #import(multicore)
 # Commented out because of "Error : package 'Rmpi' does not have a name space"
 # import(Rmpi)
