* .Rbuildignore: Add ^examples and ignore patches.
git-svn-id: file:///home/manu/work/irace/svn/trunk@549 d10a546b-4b69-48e5-8b66-49ccea70c6a4

--- a/.Rbuildignore
+++ b/.Rbuildignore
@@ -1,4 +1,5 @@
 \.diff$
+\.patch$
 \.orig$
 \.svn$
 \.Rhistory$
@@ -9,8 +10,7 @@ TODO
 TUNE.*
 dist\.sh
 ^doc$
-examples/beamaco
-examples/hypervolume
+^examples
 ^hooks/hook-evaluate
 ^hooks/hook-run
 ^hooks/tune-main
