--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -3,8 +3,7 @@ Type: Package
 Title: Iterated Racing Procedures
 Version: 1.02
 Date: 2012-03-19
-Maintainer: Manuel López-Ibáñez and Jérémie Dubois-Lacoste 
-            <irace@iridia.ulb.ac.be>
+Maintainer: Manuel López-Ibáñez <irace@iridia.ulb.ac.be>
 Author: Manuel López-Ibáñez, Jérémie Dubois-Lacoste,
         Thomas Stützle, Mauro Birattari, Eric Yuan and Prasanna Balaprakash
 Description: Iterated racing for automatic algorithm configuration
