* R/utils.R:   Simplify call to mpi.spawn with debugLevel  * DESCRIPTION: Mention dependency of Rmpi >= 0.6.0
git-svn-id: file:///home/manu/work/irace/svn/trunk@641 d10a546b-4b69-48e5-8b66-49ccea70c6a4

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -8,7 +8,7 @@ Author: Manuel López-Ibáñez, Jérémie Dubois-Lacoste,
         Thomas Stützle, Mauro Birattari, Eric Yuan and Prasanna Balaprakash
 Description: Iterated racing for automatic algorithm configuration
 Depends: R (>= 2.9.2)
-Suggests: multicore, Rmpi
+Suggests: multicore, Rmpi (>= 0.6.0)
 License: GPL (>= 2)
 URL: http://iridia.ulb.ac.be/irace
 LazyLoad: true
