--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,13 +2,13 @@ Package: irace
 Type: Package
 Title: Iterated Racing Procedures
 Version: 1.04
-Date: 2013-01-15
+Date: 2013-06-04
 Maintainer: Manuel López-Ibáñez <manuel.lopez-ibanez@ulb.ac.be>
 Author: Manuel López-Ibáñez, Jérémie Dubois-Lacoste,
         Thomas Stützle, Mauro Birattari, Eric Yuan and Prasanna Balaprakash
 Description: Iterated racing for automatic algorithm configuration
-Depends: R (>= 2.12.0)
-Suggests: multicore, Rmpi (>= 0.6.0)
+Depends: R (>= 2.14.0)
+Suggests: Rmpi (>= 0.6.0)
 License: GPL (>= 2)
 URL: http://iridia.ulb.ac.be/irace
 LazyLoad: true
