* R/generation.R: Do not pass tunerConfig just for digits. * R/irace.R: Update call to sampleUniform. * NAMESPACE: Add note about functions that would be nice to export.
git-svn-id: file:///home/manu/work/irace/svn/trunk@863 d10a546b-4b69-48e5-8b66-49ccea70c6a4

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -1,5 +1,6 @@
 export(irace.version,irace.license)
 export(irace.cmdline,irace.usage,irace.main,irace)
+# FIXME: export sampleUniform, sampleModel and other useful functions.
 export(defaultConfiguration,checkConfiguration, printConfiguration,
        readConfiguration, buildCommandLine, readParameters,
        candidates.print.command, candidates.print, removeCandidatesMetaData, hook.run.default, hook.evaluate.default)
