--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -4,7 +4,7 @@ Title: Iterated Racing Procedures
 Version: 1.05
 Date: 2014-07-09
 Maintainer: Manuel López-Ibáñez <manuel.lopez-ibanez@ulb.ac.be>
-Author: Manuel López-Ibáñez, Jérémie Dubois-Lacoste,
+Author: Manuel López-Ibáñez, Jérémie Dubois-Lacoste, Leslie Pérez Cáceres,
         Thomas Stützle, Mauro Birattari, Eric Yuan and Prasanna Balaprakash
 Description: Iterated racing for automatic algorithm configuration
 Depends: R (>= 2.14.0)
