* web/Makefile: Update remote path.
git-svn-id: file:///home/manu/work/irace/svn/trunk@984 d10a546b-4b69-48e5-8b66-49ccea70c6a4

--- a/web/Makefile
+++ b/web/Makefile
@@ -1,5 +1,5 @@
 HOST=iridia
-REMOTEDIR=/home/httpd/html/irace/
+REMOTEDIR=/var/www/iridia.ulb.ac.be/irace/
 RSYNC_FLAGS =  -rlczCI --copy-links --stats --progress  \
 --exclude=.svn --exclude=.checksum-ignore 
 
