--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,7 @@ export(irace.cmdline,irace.usage,irace.main,irace)
 # FIXME: export sampleUniform, sampleModel and other useful functions.
 export(defaultConfiguration,checkConfiguration, printConfiguration,
        readConfiguration, buildCommandLine, readParameters,
-       candidates.print.command, candidates.print, removeCandidatesMetaData, hook.run.default, hook.evaluate.default)
+       candidates.print.command, candidates.print, removeCandidatesMetaData, 
+       hook.run.default, hook.evaluate.default)
 # Commented out because of "Error : package 'Rmpi' does not have a name space"
 # import(Rmpi)
