* Fix new CRAN warnings.
git-svn-id: file:///home/manu/work/irace/svn/trunk@1147 d10a546b-4b69-48e5-8b66-49ccea70c6a4

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -1,3 +1,5 @@
+import("stats")
+import("utils")
 export(irace.version,irace.license)
 export(irace.cmdline,irace.usage,irace.main,irace)
 # FIXME: export sampleUniform, sampleModel and other useful functions.
