--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,12 +2,13 @@ Package: irace
 Type: Package
 Title: Iterated Racing Procedures
 Version: 1.07
-Date: 2015-06-09
+Date: 2015-07-02
 Maintainer: Manuel López-Ibáñez <manuel.lopez-ibanez@ulb.ac.be>
 Author: Manuel López-Ibáñez, Jérémie Dubois-Lacoste, Leslie Pérez Cáceres,
         Thomas Stützle, Mauro Birattari, Eric Yuan and Prasanna Balaprakash
 Description: Iterated racing for automatic algorithm configuration
 Depends: R (>= 2.14.0)
+Imports: stats, utils
 Suggests: Rmpi (>= 0.6.0), parallel
 License: GPL (>= 2)
 URL: http://iridia.ulb.ac.be/irace
