* web/Makefile: Mention rsync and pandoc.
git-svn-id: file:///home/manu/work/irace/svn/trunk@1444 d10a546b-4b69-48e5-8b66-49ccea70c6a4

--- a/web/Makefile
+++ b/web/Makefile
@@ -5,6 +5,7 @@ RSYNC_FLAGS =  -rlczCI --copy-links --stats --progress  \
 
 default:
 	@echo "make [ get | put | testget | testput ]"
+	@echo "You need to have 'rsync' and 'pandoc' installed"	
 
 testput: files/README.html
 	rsync $(RSYNC_FLAGS) --dry-run --delete --delete-excluded . $(HOST):$(REMOTEDIR)
