* .Rbuildignore: more strict patterns.
git-svn-id: file:///home/manu/work/irace/svn/trunk@1459 d10a546b-4b69-48e5-8b66-49ccea70c6a4

--- a/.Rbuildignore
+++ b/.Rbuildignore
@@ -4,12 +4,12 @@
 \.svn$
 \.Rhistory$
 \.rej$
-Instances$
-Makefile
-Program
-TODO
-TUNE.*
-dist\.sh
+^Instances$
+^Makefile$
+^Program$
+^TODO.*
+^TUNE.*
+^dist\.sh$
 ^doc$
 ^examples
 ^hooks/hook-evaluate
@@ -26,11 +26,12 @@ inst/doc/\.auctex-auto
 DEVEL-README
 ^tmp
 irace\.Rdata
-^.*\.data
-^R/.*\.data
+^.+\.data
+^R/.+\.data
 ^testing
 ^svn_version
 ^check-reverse
 ^devel-tests
 ^vignettes
 .+~
+
