* nsga2/Make it non-interactive. Include DTLZ. Most changes are by Leonardo Bezerra.
git-svn-id: file:///home/manu/work/irace/svn/trunk@1464 d10a546b-4b69-48e5-8b66-49ccea70c6a4

--- a/examples/nsga2/nsga2/Makefile
+++ b/examples/nsga2/nsga2/Makefile
@@ -2,7 +2,7 @@
 CC=gcc
 LD=gcc
 RM=rm -f
-CFLAGS=-Wall -ansi -pedantic -g
+CFLAGS=-Wall -pedantic -g
 OBJS:=$(patsubst %.c,%.o,$(wildcard *.c))
 MAIN=nsga2r
 all:$(MAIN)
