* Silence CRAN warninga about vignettes. We are forced to distribute the sources. Thus, delete inst/doc/ dummy files. Ignore some temporary files in .Rbuildignore and sort-lines.
git-svn-id: file:///home/manu/work/irace/svn/trunk@1490 d10a546b-4b69-48e5-8b66-49ccea70c6a4

--- a/.Rbuildignore
+++ b/.Rbuildignore
@@ -1,37 +1,37 @@
-\.diff$
-\.patch$
-\.orig$
-\.svn$
+.+~
+DEVEL-README
 \.Rhistory$
+\.auctex-auto
+\.diff$
+\.orig$
+\.patch$
 \.rej$
+\.svn$
+^.+\.data
 ^Instances$
 ^Makefile$
 ^Program$
+^R/.+\.data
 ^TODO.*
 ^TUNE.*
+^check-reverse
+^devel-tests
 ^dist\.sh$
 ^doc$
 ^examples
 ^hooks/hook-evaluate
 ^hooks/hook-run
-inst/.+~
-inst/doc/auto
-^\.auctex-auto
-inst/doc/\.auctex-auto
-^parameters\.txt
-^tune-conf$
-^scenario\.txt$
-^web
+^inst/.+~
+^inst/doc/\.auctex-auto
+^inst/doc/auto
 ^irace-Ex.R
-DEVEL-README
-^tmp
-irace\.Rdata
-^.+\.data
-^R/.+\.data
-^testing
+^irace\.Rdata
+^parameters\.txt
+^scenario\.txt$
 ^svn_version
-^check-reverse
-^devel-tests
-^vignettes
-.+~
-
+^testing
+^tmp
+^tune-conf$
+^vignettes/\.auctex-auto
+^vignettes/figure
+^web
