* DESCRIPTION: Match title of paper. * R/readParameters.R: Remove useless stop() default arguments. * R/utils.R: Likewise. * R/readConfiguration.R: Likewise. * R/generation.R: Likewise. * R/main.R: Fix whitespace in irace.license. * svn:ignore: TAGS. * web/Makefile: Build tar.gz files for web tutorial.
git-svn-id: file:///home/manu/work/irace/svn/trunk@1520 d10a546b-4b69-48e5-8b66-49ccea70c6a4

--- a/web/Makefile
+++ b/web/Makefile
@@ -2,6 +2,10 @@ HOST=iridia
 REMOTEDIR=/var/www/iridia.ulb.ac.be/irace/
 RSYNC_FLAGS =  -rlczCI --copy-links --stats --progress  \
 --exclude=.svn --exclude=.checksum-ignore 
+CWD:=$(shell pwd)
+SHELL=bash
+
+.PHONY: tutorial
 
 default:
 	@echo "make [ get | put | testget | testput ]"
@@ -22,3 +26,8 @@ put: files/README.html
 files/README.html : ../README.md
 	pandoc -s --toc --toc-depth=4  --ascii ../README.md > files/README.html
 
+tutorial: 
+	pushd ../examples && \
+	tar avfc $(CWD)/tutorial/downloads/nsga2-example.tar.gz \
+		--dereference --check-links --exclude='*.o' --exclude '*~' --exclude-vcs  nsga2 && \
+	popd
