--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,12 +1,12 @@
 Package: irace
 Type: Package
-Title: Iterated Race for Automatic Algorithm Configuration
+Title: Iterated Racing for Automatic Algorithm Configuration
 Description: Iterated race is an extension of the Iterated F-race method for
              the automatic configuration of optimization algorithms, that is,
              (offline) tuning their parameters by finding the most appropriate
              settings given a set of instances of an optimization problem.
 Version: 2.0
-Date: 2016-06-07
+Date: 2016-06-25
 Maintainer: Manuel López-Ibáñez <manuel.lopez-ibanez@manchester.ac.uk>
 Author: Manuel López-Ibáñez, Jérémie Dubois-Lacoste, Leslie Pérez Cáceres,
         Thomas Stützle, Mauro Birattari, Eric Yuan and Prasanna Balaprakash
