* .Rbuildignore: Ignore more latex temp files.
git-svn-id: file:///home/manu/work/irace/svn/trunk@1577 d10a546b-4b69-48e5-8b66-49ccea70c6a4

--- a/.Rbuildignore
+++ b/.Rbuildignore
@@ -35,4 +35,7 @@ DEVEL-README
 ^tune-conf$
 ^vignettes/\.auctex-auto
 ^vignettes/figure
+^vignettes/.*log
+^vignettes/.*synctex.gz
+^vignettes/.*rel
 ^web
