* NAMESPACE: add importFrom grDevices and graphics to silence cran warning.
git-svn-id: file:///home/manu/work/irace/svn/trunk@1595 d10a546b-4b69-48e5-8b66-49ccea70c6a4

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -1,5 +1,8 @@
 import("stats")
 import("utils")
+importFrom("grDevices", "dev.new", "dev.off", "pdf")
+importFrom("graphics", "abline", "axis", "barplot", "hist", "lines",
+           "matplot", "par", "text")
 export(irace.version,irace.license)
 export(irace.cmdline,irace.usage,irace.main,irace)
 # FIXME: export sampleUniform, sampleModel and other useful functions.
