Autogenerate bib file using aux2bib.
git-svn-id: file:///home/manu/work/irace/svn/trunk@1606 d10a546b-4b69-48e5-8b66-49ccea70c6a4

--- a/.Rbuildignore
+++ b/.Rbuildignore
@@ -35,7 +35,10 @@ DEVEL-README
 ^tune-conf$
 ^vignettes/\.auctex-auto
 ^vignettes/figure
+^vignettes/optbib
 ^vignettes/.*log
+^vignettes/.*blg
+^vignettes/.*bbl
 ^vignettes/.*synctex.gz
 ^vignettes/.*rel
 ^vignettes/.*dvi
