* tests/testthat.R (test.checkForbidden): New test.  * man/readConfigurationsFile.Rd: Update.  * R/readConfiguration.R (readConfigurationsFile): Add text=.  (readForbiddenFile): New. Use compiler.  * R/generation.R: Add FIXME.  * NEWS: Update.
git-svn-id: file:///home/manu/work/irace/svn/trunk@1757 d10a546b-4b69-48e5-8b66-49ccea70c6a4

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -11,7 +11,7 @@ Maintainer: Manuel López-Ibáñez <manuel.lopez-ibanez@manchester.ac.uk>
 Author: Manuel López-Ibáñez, Jérémie Dubois-Lacoste, Leslie Pérez Cáceres,
         Thomas Stützle, Mauro Birattari, Eric Yuan and Prasanna Balaprakash
 Depends: R (>= 2.15.0)
-Imports: stats, utils
+Imports: stats, utils, compiler
 Suggests: Rmpi (>= 0.6.0), parallel, knitr
 VignetteBuilder: knitr
 License: GPL (>= 2)
