* README.md: Remove yaml header that causes trouble in CRAN. Add it for the irace webpage separately.
git-svn-id: file:///home/manu/work/irace/svn/trunk@1762 d10a546b-4b69-48e5-8b66-49ccea70c6a4

--- a/web/Makefile
+++ b/web/Makefile
@@ -23,8 +23,8 @@ get:
 put: files/README.html
 	rsync $(RSYNC_FLAGS)  --delete --delete-excluded . $(HOST):$(REMOTEDIR)
 
-files/README.html : ../README.md
-	pandoc -s --toc --toc-depth=4  --ascii ../README.md > files/README.html
+files/README.html : ../README.md pandoc_header.yaml
+	pandoc -s --toc --toc-depth=4  --ascii ./pandoc_header.yaml ../README.md > files/README.html
 
 tutorial: 
 	pushd ../examples && \
