--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,12 +6,27 @@ importFrom("graphics", "abline", "axis", "barplot", "hist", "lines",
 export(irace.version,irace.license)
 export(irace.cmdline,irace.usage,irace.main,irace)
 # FIXME: export sampleUniform, sampleModel and other useful functions.
-export(defaultScenario,checkScenario, printScenario,
-       readScenario, buildCommandLine, readParameters, readConfigurationsFile,
-       configurations.print.command, configurations.print,
-       removeConfigurationsMetaData, checkIraceScenario, 
-       target.runner.default, target.evaluator.default)
-export(testing.main, getFinalElites, getConfigurationById, getConfigurationByIteration,
-       parameterFrequency, parallelCoordinatesPlot)
+export(
+  buildCommandLine,
+  checkIraceScenario,
+  checkScenario,
+  configurations.print,
+  configurations.print.command,
+  defaultScenario,
+  getConfigurationById,
+  getConfigurationByIteration,
+  getFinalElites,
+  parallelCoordinatesPlot,
+  parameterFrequency,
+  printScenario,
+  readConfigurationsFile,
+  readParameters,
+  readScenario,
+  removeConfigurationsMetaData,
+  target.evaluator.default,
+  target.runner.default,
+  testConfigurations,
+  testing.main
+)
 # Commented out because of "Error : package 'Rmpi' does not have a name space"
 # import(Rmpi)
