--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,7 @@ export(checkIraceScenario)
 export(checkScenario)
 export(configurations.print)
 export(configurations.print.command)
+export(configurationsBoxplot)
 export(defaultScenario)
 export(getConfigurationById)
 export(getConfigurationByIteration)
