R/irace-package.R: Add more imports.  * R/parameterAnalysis.R: Minor fformatting.
git-svn-id: file:///home/manu/work/irace/svn/trunk@2031 d10a546b-4b69-48e5-8b66-49ccea70c6a4

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -32,15 +32,21 @@ export(testing.main)
 import(compiler)
 import(stats)
 import(utils)
+importFrom(grDevices,cairo_pdf)
 importFrom(grDevices,dev.new)
 importFrom(grDevices,dev.off)
 importFrom(grDevices,pdf)
+importFrom(grDevices,rgb)
 importFrom(graphics,abline)
 importFrom(graphics,axis)
 importFrom(graphics,barplot)
+importFrom(graphics,boxplot)
 importFrom(graphics,hist)
 importFrom(graphics,lines)
 importFrom(graphics,matplot)
+importFrom(graphics,mtext)
 importFrom(graphics,par)
 importFrom(graphics,plot)
+importFrom(graphics,points)
+importFrom(graphics,strwidth)
 importFrom(graphics,text)
