Export and document plotAblation.
git-svn-id: file:///home/manu/work/irace/svn/trunk@2083 d10a546b-4b69-48e5-8b66-49ccea70c6a4

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -19,6 +19,7 @@ export(irace.usage)
 export(irace.version)
 export(parallelCoordinatesPlot)
 export(parameterFrequency)
+export(plotAblation)
 export(printScenario)
 export(psRace)
 export(readConfigurationsFile)
