--- a/NAMESPACE
+++ b/NAMESPACE
@@ -42,6 +42,8 @@ importFrom(graphics,abline)
 importFrom(graphics,axis)
 importFrom(graphics,barplot)
 importFrom(graphics,boxplot)
+importFrom(graphics,bxp)
+importFrom(graphics,grid)
 importFrom(graphics,hist)
 importFrom(graphics,lines)
 importFrom(graphics,matplot)
