* .Rbuildignore: ignore pkgdown subdir.
git-svn-id: file:///home/manu/work/irace/svn/trunk@2141 d10a546b-4b69-48e5-8b66-49ccea70c6a4

--- a/.Rbuildignore
+++ b/.Rbuildignore
@@ -20,6 +20,7 @@ DEVEL-README
 ^devel-tests
 ^dist\.sh$
 ^doc$
+^docs$
 ^examples
 ^hooks/hook-evaluate
 ^hooks/hook-run
@@ -29,6 +30,7 @@ DEVEL-README
 ^irace-Ex.R
 ^irace\.Rdata
 ^parameters\.txt
+^pkgdown$
 ^scenario\.txt$
 ^svn_version
 ^testing
