Several improvements to testing.
git-svn-id: file:///home/manu/work/irace/svn/trunk@2239 d10a546b-4b69-48e5-8b66-49ccea70c6a4

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -24,7 +24,9 @@ Suggests:
         Rmpi (>= 0.6.0),
         parallel,
         knitr,
-        testthat
+        testthat,
+        withr,
+        mlr
 VignetteBuilder: knitr
 License: GPL (>= 2)
 URL: http://iridia.ulb.ac.be/irace
