Use roxygen templates and markdown.
git-svn-id: file:///home/manu/work/irace/svn/trunk@2349 d10a546b-4b69-48e5-8b66-49ccea70c6a4

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -26,7 +26,7 @@ Suggests:
         knitr,
         testthat,
         withr,
-        mlr
+        mlr (>= 2.15.0)
 VignetteBuilder: knitr
 License: GPL (>= 2)
 URL: http://iridia.ulb.ac.be/irace
