* DESCRIPTION: Declare ParamHelpers used in test.
git-svn-id: file:///home/manu/work/irace/svn/trunk@2360 d10a546b-4b69-48e5-8b66-49ccea70c6a4

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -26,7 +26,8 @@ Suggests:
         knitr,
         testthat,
         withr,
-        mlr (>= 2.15.0)
+        mlr (>= 2.15.0),
+        ParamHelpers
 VignetteBuilder: knitr
 License: GPL (>= 2)
 URL: http://iridia.ulb.ac.be/irace
