* DESCRIPTION: Suggest devtools and rhub.
git-svn-id: file:///home/manu/work/irace/svn/trunk@2375 d10a546b-4b69-48e5-8b66-49ccea70c6a4

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -27,7 +27,9 @@ Suggests:
         testthat,
         withr,
         mlr (>= 2.15.0),
-        ParamHelpers
+        ParamHelpers,
+        devtools,
+        rhub
 VignetteBuilder: knitr
 License: GPL (>= 2)
 URL: http://iridia.ulb.ac.be/irace
