* Use R6 class to implement the argument parser.
git-svn-id: file:///home/manu/work/irace/svn/trunk@2409 d10a546b-4b69-48e5-8b66-49ccea70c6a4

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -20,7 +20,8 @@ Depends: R (>= 3.2.0)
 Imports:
         stats,
         utils,
-        compiler
+        compiler,
+        R6
 Suggests:
         Rmpi (>= 0.6.0),
         parallel,
