--- a/NAMESPACE
+++ b/NAMESPACE
@@ -36,6 +36,7 @@ export(testing.main)
 import(compiler)
 import(stats)
 import(utils)
+importFrom(R6,R6Class)
 importFrom(grDevices,cairo_pdf)
 importFrom(grDevices,dev.new)
 importFrom(grDevices,dev.off)
