* man/read_pcs_file.Rd: New.
git-svn-id: file:///home/manu/work/irace/svn/trunk@2415 d10a546b-4b69-48e5-8b66-49ccea70c6a4

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -27,6 +27,7 @@ export(psRace)
 export(readConfigurationsFile)
 export(readParameters)
 export(readScenario)
+export(read_pcs_file)
 export(removeConfigurationsMetaData)
 export(scenario.update.paths)
 export(target.evaluator.default)
