--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -5,6 +5,8 @@ Description: Iterated race is an extension of the Iterated F-race method for
              the automatic configuration of optimization algorithms, that is,
              (offline) tuning their parameters by finding the most appropriate
              settings given a set of instances of an optimization problem.
+             M. López-Ibáñez, J. Dubois-Lacoste, L. Pérez Cáceres, T. Stützle,
+             and M. Birattari (2016) <doi:10.1016/j.orp.2016.09.002>.
 Version: 3.5
 Authors@R: c(person("Manuel", "López-Ibáñez", role = c("aut", "cre"),
                               email = "manuel.lopez-ibanez@manchester.ac.uk",
