New functions `testing_fromlog()` and `testing_fromfile()` for independently executing the testing phase. The function `testing.main()` was removed as it is superseded by the new ones.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -33,7 +33,8 @@ export(scenario.update.paths)
 export(target.evaluator.default)
 export(target.runner.default)
 export(testConfigurations)
-export(testing.main)
+export(testing_fromfile)
+export(testing_fromlog)
 import(compiler)
 import(stats)
 import(utils)
