--- a/codecov.yml
+++ b/codecov.yml
@@ -6,7 +6,5 @@ coverage:
       default:
         target: auto
         threshold: 1%
-    patch:
-      default:
-        target: auto
-        threshold: 1%
+    patch: off
+
