* Makefile (TEST): use stop_on_failure=TRUE.   (rsync): Exclude unnecessary folders and load profile before quick-install.

--- a/.Rbuildignore
+++ b/.Rbuildignore
@@ -13,6 +13,7 @@ DEVEL-README
 ^.+\.data
 ^GenericWrapper4AC
 ^Instances$
+^LICENSE\.md$
 ^Makefile$
 ^Program$
 ^R/.+\.data
@@ -67,4 +68,4 @@ DEVEL-README
 ^vignettes/optbib
 ^web
 _pkgdown.yml
-^LICENSE\.md$
+_snaps
