Export path_rel2abs.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -21,6 +21,7 @@ export(irace.usage)
 export(irace.version)
 export(parallelCoordinatesPlot)
 export(parameterFrequency)
+export(path_rel2abs)
 export(plotAblation)
 export(printScenario)
 export(psRace)
