--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -141,7 +141,7 @@ jobs:
           git config --local user.email "actions@github.com"
           git config --local user.name "GitHub Actions"
           # Commit version.R so that install_github works
-          git add R/version.R
+          git add --force R/version.R
           git commit R/version.R --allow-empty -m "Update version.R [skip ci]"
           git push --force origin 'HEAD'
           # Commit vignette PDF to webpage
