* LICENSE.md: Add license file for github.

--- a/.Rbuildignore
+++ b/.Rbuildignore
@@ -1,19 +1,17 @@
 .+~
-\.o$
 DEVEL-README
 \.Rhistory$
 \.auctex-auto
+\.bak$
 \.diff$
+\.o$
 \.orig$
 \.patch$
 \.rej$
 \.svn$
-\.bak$
 \.travis
-\.github
-^\.git$
-_pkgdown.yml
 ^.+\.data
+^GenericWrapper4AC
 ^Instances$
 ^Makefile$
 ^Program$
@@ -21,12 +19,16 @@ _pkgdown.yml
 ^R/TAGS
 ^TODO.*
 ^TUNE.*
+^\.git$
+^\.github$
 ^check-reverse
+^codecov\.yml$
 ^devel-tests
 ^dist\.sh$
 ^doc$
 ^docs$
 ^examples
+^git_version$
 ^hooks/hook-evaluate
 ^hooks/hook-run
 ^inst/.+~
@@ -39,28 +41,26 @@ _pkgdown.yml
 ^pkgdown$
 ^revdep$
 ^scenario\.txt$
+^scripts
 ^src/iracebin/irace$
 ^src/iracebin/irace.exe$
 ^src/iracebin/irace2pyimp$
 ^src/iracebin/irace2pyimp.exe$
-^git_version$
 ^svn_version$
 ^testing
+^tests/testthat/test-nocran-*
 ^tmp
 ^tune-conf$
+^vignettes/.*bbl
+^vignettes/.*blg
+^vignettes/.*dvi
+^vignettes/.*log$
+^vignettes/.*rel
+^vignettes/.*synctex.gz
 ^vignettes/\.auctex-auto
+^vignettes/_region_.tex
 ^vignettes/figure
 ^vignettes/optbib
-^vignettes/.*log$
-^vignettes/.*blg
-^vignettes/.*bbl
-^vignettes/.*synctex.gz
-^vignettes/.*rel
-^vignettes/.*dvi
-^vignettes/_region_.tex
 ^web
-^scripts
-^tests/testthat/test-nocran-*
-^GenericWrapper4AC
-^codecov\.yml$
-^\.github$
+_pkgdown.yml
+^LICENSE\.md$
