--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -103,6 +103,7 @@ jobs:
 
           
       - name: make version
+        if: success() && runner.os == 'Linux'
         run: |
           make version
           
